--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: aaggarwal73
   instagram:
-  linkedin: linkedin.com/in/aaggarwal73
+  linkedin: aaggarwal73
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter:
