updated about me and some config

--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,7 @@
 title: Aman Aggarwal
 email: agg2537@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A personal website to showcase my developments in my career, travels, and reflections on college
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
@@ -46,8 +44,8 @@ plugins:
 author:
   name             : "Aman Aggarwal"
   avatar           : "./assets/images/biopic.jpg"
-  bio              : "I am a person."
-  location         : "Somewhere"
+  bio              : "A goal-driven Georgia Tech graduate passionate about leadership, service, and personal growth"
+  location         : "Seattle"
   email            : agg2537@gmail.com
 
 collections:
@@ -58,7 +56,7 @@ collections:
 defaults:
   # _posts
   - scope:
-      path: ""
+      path: "../_college/"
       type: posts
     values:
       layout: single
